automatically zips help content and includes it to the jar file

--- a/Density-Vis/build.xml
+++ b/Density-Vis/build.xml
@@ -72,6 +72,13 @@
 
     -->
     
+    <target name="-pre-jar">
+        
+        <zip destfile="dist/tmp/eu/mihosoft/vrl/plugin/content/help.zip">
+            <fileset dir="help"/>
+        </zip>
+        
+    </target>
     
     <target name="-post-jar">
         
