--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,8 +31,8 @@ file.reference.groovy-all.jar=/Users/miho/EigeneApps/VRL/VRL/jars/groovy/groovy-
 file.reference.ij.jar=jars/imagej/ImageJ/ij.jar
 file.reference.j3dcore.jar=/Users/miho/EigeneApps/VRL/VRL/jars/java3d/j3dcore.jar
 file.reference.j3dutils.jar=/Users/miho/EigeneApps/VRL/VRL/jars/java3d/j3dutils.jar
-file.reference.jfreechart-1.0.13.jar=jars/jfreechart/jfreechart-1.0.13.jar
 file.reference.vecmath.jar=/Users/miho/EigeneApps/VRL/VRL/jars/java3d/vecmath.jar
+file.reference.VRL-JFreeChart.jar=../../../.vrl/0.4.2/default/plugins/VRL-JFreeChart.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -43,9 +43,9 @@ javac.classpath=\
     ${file.reference.j3dutils.jar}:\
     ${file.reference.vecmath.jar}:\
     ${file.reference.groovy-all.jar}:\
-    ${file.reference.jfreechart-1.0.13.jar}:\
     ${reference.VRL.jar}:\
-    ${reference.VRL-JFreeChart.jar}
+    ${reference.VRL-JFreeChart.jar}:\
+    ${file.reference.VRL-JFreeChart.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -66,7 +66,6 @@ javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
 javadoc.reference.ij.jar=jars/imagej/ImageJ/api.zip!/api/
-javadoc.reference.jfreechart-1.0.13.jar=jars/jfreechart/jfreechart-1.0.13-javadocs.zip!/jfreechart-1.0.13-javadocs/
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -87,7 +86,7 @@ mkdist.disabled=false
 no.dependencies=true
 platform.active=default_platform
 project.VRL=../../VRL/VRL
-project.VRL-JFreeChart=../../VRL-JFreeChart/VRL-JFreeChart
+project.VRL-JFreeChart=../VRL-JFreeChart/VRL-JFreeChart
 reference.VRL-JFreeChart.jar=${project.VRL-JFreeChart}/dist/VRL-JFreeChart.jar
 reference.VRL.jar=${project.VRL}/dist/VRL.jar
 run.classpath=\
